--- a/app/src/main/res/layout/activity_new_movie.xml
+++ b/app/src/main/res/layout/activity_new_movie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,27 +11,58 @@
         android:id="@+id/my_toolbar"
         layout="@layout/layout_toolbar"/>
 
-
-    <EditText
-        android:id="@+id/edit_text_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Movie Title"
-        android:inputType="text"/>
+        android:layout_height="match_parent"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/textview_movie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title:"
+            />
+
+        <EditText
+            android:id="@+id/edit_text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Movie Title"
+            android:inputType="text"
+            android:layout_below="@id/textview_movie"
+            android:layout_marginBottom="12dp"/>
 
 
-    <EditText
-        android:id="@+id/edit_text_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Movie Description"
-        android:inputType="text"/>
+        <TextView
+            android:id="@+id/textview_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edit_text_title"
+            android:text="Description:" />
 
-    <EditText
-        android:id="@+id/edit_text_url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Movie Url"
-        android:inputType="text"/>
+        <EditText
+            android:id="@+id/edit_text_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Movie Description"
+            android:layout_below="@+id/textview_description"
+            android:inputType="text"
+            android:layout_marginBottom="12dp"/>
 
+        <TextView
+            android:id="@+id/textview_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Url:"
+            android:layout_below="@id/edit_text_description"/>
+
+        <EditText
+            android:id="@+id/edit_text_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Movie Url"
+            android:inputType="text"
+            android:layout_below="@id/textview_url"
+            />
+    </RelativeLayout>
 </LinearLayout>
