--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".WelcomeActivity">
 
     <ImageView
@@ -12,9 +13,9 @@
         android:layout_width="151dp"
         android:layout_height="133dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="230dp"
         android:layout_marginEnd="10dp"
-        android:src="@drawable/app_image"
+        android:src="@drawable/ic_movie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,10 +24,13 @@
         android:id="@+id/app_logo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/roboto_bold"
         android:text="@string/app_name"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/app_slogan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,13 +42,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:layout_marginBottom="130dp"
-        android:text="explore rental issues in greater Vancouver"
+        android:fontFamily="@font/roboto_mono_italic"
+        android:text="your custom movie list"
         android:textAlignment="center"
+        android:textColor="@color/colorBackground"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_logo" />
 
