--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginEnd="8dp"
+    android:background="@color/colorBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,6 +19,9 @@
             android:layout_alignParentStart="true"
             android:maxLines="1"
             android:ellipsize="end"
+            android:fontFamily="@font/roboto_bold"
+            android:textSize="@dimen/activity_text_title"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Name"/>
 
         <TextView
@@ -26,6 +30,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@id/movie_name"
+            android:textSize="@dimen/activity_text_heading1"
+            android:fontFamily="@font/roboto"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Description"/>
 
         <TextView
@@ -34,6 +41,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@id/description"
+            android:textSize="@dimen/activity_text_heading1"
+            android:fontFamily="@font/roboto"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="URL"/>
 
     </RelativeLayout>
