--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,23 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F16664</color>
-    <color name="colorPrimaryDark">#ed3836</color>
-    <color name="colorBackground">#FAE1E1</color>
-    <color name="colorAccent">#007D8C</color>
-    <color name="colorCard">#d8e2dc</color>
-    <color name="colorGrey">#C9C9C9</color>
-    <color name="colorWhite">#FFF</color>
-
-
-    <color name="backgroundcolor">#fcfcfc</color>
-    <color name="lightgray">#ededed</color>
-    <color name="deeppurple">#7c4dff</color>
-    <color name="yello">#ffb300</color>
-    <color name="green">#00bfa5</color>
-    <color name="darkblue">#23283a</color>
-    <color name="testcolorblue">#152b38</color>
-    <color name="pink">#fe104d</color>
-
-    <color name="black_overlay">#66000000</color>
-
+    <color name="colorPrimary">#E50914</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorBackground">#FFF</color>
 </resources>
