--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
     </style>
 
     <style name="WelcomeTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -9,20 +9,17 @@
     </style>
 
     <style name="ApplicationTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="android:color">@color/colorBackground</item>
     </style>
+
 
 
     <style name="CustomToolBarStyle" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:background">@color/colorPrimary</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="actionMenuTextColor">@android:color/white</item>
-    </style>
-
-    <style name="CustomToolBarPopUp" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:background">@color/colorAccent</item>
-        <item name="overlapAnchor">false</item>
-        <item name="android:dropDownVerticalOffset">-4dp</item>
+        <item name="android:textColorPrimary">@color/colorBackground</item>
+        <item name="android:textColorSecondary">@color/colorBackground</item>
+        <item name="actionMenuTextColor">@color/colorPrimary</item>
     </style>
 
 
